@@ -1,3 +1,10 @@
+2006-04-07  Patrick K O'Brien <pobrien@orbtech.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py: only respond to the toggled event 
+	when a boolean column is set to editable. Fixes #2525
+
 2006-04-06  Ronaldo Maia  <romaia@async.com.br>
 
 	reviewed by: jdahlin
